1999-05-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Make modules.o part of every linking set, including `base'.
        * makemake.in (lisp.a): Don't include modules.o.
          (modular): Depend on modules.o.
          (base): Link over modules.o.
          (distmakefile): Add modules.o to the BASE_LIBS and BASE_FILES
          substitution.
          (distrib): Link over modules.o into $(TOPDIR)/base.
        * clisp-link.in (add-module-set): Check that the linking set contains
          a file `modules.o'.
          (add-module-sets): Likewise. When no new modules, copy modules.o
          in any case.
          (run): Check that the linking set contains a file `modules.o'.

1999-05-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * makemake.in (distmakefile): Don't set $wlibs, not needed any more.

1999-05-20  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * spvw.d (initmem): Don't call SYS::SET-ANSI (no need, doesn't work).

1999-05-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * intlog.d (integerlength32) [RS6000]: Use new or old mnemonics
          depending on OS.

1999-05-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Libtoolify sigsegv.
        * autoconf/libtool.m4: New file, from libtool-1.2.

1999-05-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        For Linux 2.0.x with glibc2.0.
        * aclocal.m4 (CL_SIGALTSTACK): Define HAVE_SIGALTSTACK only if the
          sigaction flags macro SA_ONSTACK is also defined.

1999-05-13  Gilbert Baumann  <unk6@rz.uni-karlsruhe.de>

        * sequence.d (READ-CHAR-SEQUENCE): Changed calls to
          `iarray_displace_check' to `array_displace_check'. Adjusted return
          value: The first position not written is returned.
          (WRITE-CHAR-SEQUENCE): Likewise, uses `array_displace_check' now.
          (WRITE-BYTE-SEQUENCE): In case of (VECTOR (UNSIGNED-BYTE 8)) use